# advent-of-code

./: Cargo.toml  README.md
2020/: Cargo.toml
2020/src/10/: main.rs
2020/src/12/: main.rs
2020/src/13/: main.rs
2020/src/16/: main.rs
2020/src/17/: main.rs
2020/src/18/: main.rs
2020/src/19/: main.rs
2020/src/20/: main.rs
2020/src/21/: main.rs
2020/src/22/: main.rs
2020/src/23/: main.rs
2020/src/3/: main.rs
2020/src/6/: main.rs
2020/src/8/: main.rs
2020/src/9/: main.rs
2021/src/1/: main.rs
2021/src/10/: main.rs
2021/src/12/: main.rs
2021/src/13/: main.rs
2021/src/15/: main.rs
2021/src/16/: main.rs
2021/src/18/: main.rs
2021/src/2/: main.rs
2021/src/20/: main.rs
2021/src/21/: main.rs
2021/src/3/: main.rs
2021/src/6/: main.rs
2021/src/7/: main.rs
2021/src/8/: main.rs
2021/src/9/: main.rs
2022/: Cargo.toml
2022/src/3/: main.rs
2023/: Cargo.toml
2023/src/1/: main.rs
2023/src/10/: main.rs
2023/src/11/: main.rs
2023/src/12/: main.rs
2023/src/13/: main.rs
2023/src/2/: main.rs
2023/src/3/: main.rs
2023/src/4/: main.rs
2023/src/5/: main.rs
2023/src/6/: main.rs
2023/src/7/: main.rs
2023/src/8/: main.rs
2023/src/9/: main.rs
2024/: Cargo.toml
2024/src/1/: main.rs
2024/src/10/: main.rs
2024/src/11/: main.rs
2024/src/12/: main.rs
2024/src/13/: main.rs
2024/src/14/: main.rs
2024/src/15/: main.rs
2024/src/16/: main.rs
2024/src/17/: main.rs
2024/src/18/: main.rs
2024/src/19/: main.rs
2024/src/2/: main.rs
2024/src/20/: main.rs
2024/src/3/: main.rs
2024/src/4/: main.rs
2024/src/5/: main.rs
2024/src/6/: main.rs
2024/src/7/: main.rs
2024/src/8/: main.rs
2024/src/9/: main.rs
scripts/: template.rs
src/1/: main.rs
src/11/: main.rs
src/13/: main.rs
src/14/: main.rs
src/15/: main.rs
src/17/: main.rs
src/2/: main.rs
src/20/: main.rs
src/22/: main.rs
src/23/: main.rs
src/24/: main.rs
src/4/: main.rs
src/5/: main.rs
src/7/: main.rs
