[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Nick Pearson"]
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3"
path = "src/3/main.rs"

[[bin]]
name = "4"
path = "src/4/main.rs"

[[bin]]
name = "5"
path = "src/5/main.rs"

[[bin]]
name = "6"
path = "src/6/main.rs"

[[bin]]
name = "7"
path = "src/7/main.rs"

[[bin]]
name = "8"
path = "src/8/main.rs"