[package]
name = "advent-2021"
version = "0.1.0"
authors = ["Nick Pearson"]
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
threadpool = "1.8.1"
num_cpus = "1.13.0"
joinery = "2.0.0"
num-integer = "0.1.39"

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3"
path = "src/3/main.rs"

[[bin]]
name = "4"
path = "src/4/main.rs"

[[bin]]
name = "5"
path = "src/5/main.rs"

[[bin]]
name = "6"
path = "src/6/main.rs"

[[bin]]
name = "7"
path = "src/7/main.rs"

[[bin]]
name = "8"
path = "src/8/main.rs"

[[bin]]
name = "9"
path = "src/9/main.rs"

[[bin]]
name = "10"
path = "src/10/main.rs"

[[bin]]
name = "11"
path = "src/11/main.rs"

[[bin]]
name = "12"
path = "src/12/main.rs"

[[bin]]
name = "13"
path = "src/13/main.rs"