[package]
name = "advent-2023"
version = "0.1.0"
authors = ["Nick Pearson"]
edition = "2018"

[dependencies]
itertools = "0.12.0"
nom = {version = "7", features = ["alloc"] }

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3"
path = "src/3/main.rs"

[[bin]]
name = "4"
path = "src/4/main.rs"

[[bin]]
name = "5"
path = "src/5/main.rs"

[[bin]]
name = "6"
path = "src/6/main.rs"

[[bin]]
name = "7"
path = "src/7/main.rs"

[[bin]]
name = "8"
path = "src/8/main.rs"

[[bin]]
name = "9"
path = "src/9/main.rs"