[package]
name = "advent-2024"
version = "0.1.0"
authors = ["Nick Pearson"]
edition = "2018"

[dependencies]
itertools = "0.12.0"
nom = {version = "7", features = ["alloc"] }
regex = "1"

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3"
path = "src/3/main.rs"

[[bin]]
name = "4"
path = "src/4/main.rs"

[[bin]]
name = "5"
path = "src/5/main.rs"

[[bin]]
name = "6"
path = "src/6/main.rs"

[[bin]]
name = "7"
path = "src/7/main.rs"

[[bin]]
name = "8"
path = "src/8/main.rs"

[[bin]]
name = "9"
path = "src/9/main.rs"

[[bin]]
name = "10"
path = "src/10/main.rs"

[[bin]]
name = "11"
path = "src/11/main.rs"

[[bin]]
name = "12"
path = "src/12/main.rs"

[[bin]]
name = "13"
path = "src/13/main.rs"

[[bin]]
name = "14"
path = "src/14/main.rs"